[gd_scene load_steps=30 format=3 uid="uid://dm2llsrqhkg3t"]

[ext_resource type="Script" path="res://scenes/ui/pauseMenu/pause_menu.gd" id="1_po6cs"]
[ext_resource type="Texture2D" uid="uid://brdm2am46cx02" path="res://textures/ui/LoadoutAndPauseMenu/Loadout Screen Measurement Guide 1.png" id="2_ufott"]
[ext_resource type="Texture2D" uid="uid://dy06wibd73sxu" path="res://textures/ui/LoadoutAndPauseMenu/Loadout Screen Measurement Guide 2.png" id="3_87cyt"]
[ext_resource type="Texture2D" uid="uid://b5i3e346b6pvg" path="res://textures/ui/Out of Battle/OutOfBattle_MenuButton_Diamond.png" id="3_m84tq"]
[ext_resource type="Texture2D" uid="uid://c8euvbkk0y356" path="res://textures/ui/Out of Battle/OutOfBattle_MenuButton_Diamond_pressed.png" id="4_7v36u"]
[ext_resource type="PackedScene" uid="uid://m03fqlq7hd6n" path="res://scenes/ui/cluesMenu/clues_menu.tscn" id="5_iiblx"]
[ext_resource type="Texture2D" uid="uid://wcwbjjjr6avd" path="res://textures/ui/Out of Battle/OutOfBattle_MenuButton_Diamond_hover.png" id="5_ldqd7"]
[ext_resource type="PackedScene" uid="uid://cu6c17iwu5lee" path="res://scenes/ui/loadoutMenu/loadout_menu.tscn" id="6_sfwn6"]
[ext_resource type="PackedScene" uid="uid://bw254wnisp7ip" path="res://scenes/ui/itemsMenu/items_menu.tscn" id="7_t0rmp"]
[ext_resource type="Script" path="res://scenes/rand_audio_stream_player.gd" id="10_hvvcf"]
[ext_resource type="AudioStream" uid="uid://cwuwxpfd10png" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.1.mp3" id="11_7requ"]
[ext_resource type="AudioStream" uid="uid://bhukn3snlsd8h" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.2.mp3" id="12_btysh"]
[ext_resource type="AudioStream" uid="uid://dgvwg825t8ejp" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.3.mp3" id="13_l3654"]
[ext_resource type="AudioStream" uid="uid://b55saewa5u3rv" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.4.mp3" id="14_a57x6"]
[ext_resource type="AudioStream" uid="uid://c2x8eonkds843" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.1.mp3" id="15_abru0"]
[ext_resource type="AudioStream" uid="uid://cab5mq8xhuj1g" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.2.mp3" id="16_lnirv"]
[ext_resource type="AudioStream" uid="uid://bf64g2wfbdo8n" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.3.mp3" id="17_qumpm"]
[ext_resource type="AudioStream" uid="uid://brf4xjy4yi5pu" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.4.mp3" id="18_i0lsy"]
[ext_resource type="AudioStream" uid="uid://mqwkbuokfl1q" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 1.mp3" id="19_2hqf4"]
[ext_resource type="AudioStream" uid="uid://bx276jn07ckcy" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 2.mp3" id="20_7pl4f"]
[ext_resource type="AudioStream" uid="uid://dfdwkqw32qfwb" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Exit Kingdom of Frogs/Select Exit KOF 1.mp3" id="21_extue"]
[ext_resource type="AudioStream" uid="uid://db554iixhsj7f" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Exit Kingdom of Frogs/Select Exit KOF 2.mp3" id="22_76278"]

[sub_resource type="SystemFont" id="SystemFont_yyaxe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aq6uf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oeqxe"]
bg_color = Color(0.152941, 0.145098, 0.254902, 0.54902)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lee7d"]
bg_color = Color(0.152941, 0.145098, 0.254902, 0.784314)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oucv7"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="SystemFont" id="SystemFont_g4ae0"]

[sub_resource type="SystemFont" id="SystemFont_wp4lv"]

[node name="PauseMenu" type="Control"]
process_mode = 3
process_priority = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_po6cs")

[node name="PauseButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 97.0
offset_top = 228.0
offset_right = 171.0
offset_bottom = 302.0
texture_normal = ExtResource("3_m84tq")
texture_pressed = ExtResource("4_7v36u")
texture_hover = ExtResource("5_ldqd7")

[node name="SideBar" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2i(288, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 1081.0
mouse_filter = 2

[node name="BackGround" type="Control" parent="SideBar"]
visible = false
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 1081.0
mouse_filter = 2

[node name="mid" type="ColorRect" parent="SideBar/BackGround"]
custom_minimum_size = Vector2i(248, 0)
offset_left = 20.0
offset_right = 268.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.145098, 0.137255, 0.25098, 0.741176)

[node name="Side" type="ColorRect" parent="SideBar/BackGround/mid"]
custom_minimum_size = Vector2i(20, 0)
offset_left = -20.0
offset_bottom = 1080.0
color = Color(0.145098, 0.137255, 0.25098, 0.941176)

[node name="Side2" type="ColorRect" parent="SideBar/BackGround/mid"]
custom_minimum_size = Vector2i(20, 0)
offset_left = 248.0
offset_right = 268.0
offset_bottom = 1080.0
color = Color(0.145098, 0.137255, 0.25098, 0.941176)

[node name="Selection" type="VBoxContainer" parent="SideBar"]
visible = false
offset_left = 44.0
offset_top = 381.0
offset_right = 248.0
offset_bottom = 728.0
mouse_filter = 2
theme_override_constants/separation = 26

[node name="ResumeButton" type="Button" parent="SideBar/Selection"]
custom_minimum_size = Vector2i(0, 45)
offset_right = 204.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource("SystemFont_yyaxe")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_aq6uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_oeqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lee7d")
theme_override_styles/focus = SubResource("StyleBoxFlat_oucv7")
text = "Resume"

[node name="LoadOutButton" type="Button" parent="SideBar/Selection"]
custom_minimum_size = Vector2i(0, 45)
offset_top = 71.0
offset_right = 204.0
offset_bottom = 116.0
theme_override_fonts/font = SubResource("SystemFont_g4ae0")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_aq6uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_oeqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lee7d")
theme_override_styles/focus = SubResource("StyleBoxFlat_oucv7")
toggle_mode = true
text = "Loadout"

[node name="ItemsButton" type="Button" parent="SideBar/Selection"]
custom_minimum_size = Vector2i(0, 45)
offset_top = 142.0
offset_right = 204.0
offset_bottom = 187.0
theme_override_fonts/font = SubResource("SystemFont_wp4lv")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_aq6uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_oeqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lee7d")
theme_override_styles/focus = SubResource("StyleBoxFlat_oucv7")
toggle_mode = true
text = "Items"

[node name="CluesButton" type="Button" parent="SideBar/Selection"]
custom_minimum_size = Vector2i(0, 45)
offset_top = 213.0
offset_right = 204.0
offset_bottom = 258.0
theme_override_fonts/font = SubResource("SystemFont_wp4lv")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_aq6uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_oeqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lee7d")
theme_override_styles/focus = SubResource("StyleBoxFlat_oucv7")
toggle_mode = true
text = "Clues"

[node name="Exit Kingdom Of Frogs" type="Button" parent="SideBar/Selection"]
custom_minimum_size = Vector2i(0, 45)
offset_top = 284.0
offset_right = 204.0
offset_bottom = 362.0
theme_override_fonts/font = SubResource("SystemFont_wp4lv")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_aq6uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_oeqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lee7d")
theme_override_styles/focus = SubResource("StyleBoxFlat_oucv7")
toggle_mode = true
text = "Exit Kindom of
Frogs"

[node name="LoadoutMenu" parent="." instance=ExtResource("6_sfwn6")]

[node name="CluesMenu" parent="." instance=ExtResource("5_iiblx")]

[node name="ItemsMenu" parent="." instance=ExtResource("7_t0rmp")]

[node name="LoadoutScreenMeasurementGuide1" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.368627)
texture = ExtResource("2_ufott")
centered = false

[node name="LoadoutScreenMeasurementGuide2" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 531)
texture = ExtResource("3_87cyt")

[node name="OpenAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("10_hvvcf")
samples = [ExtResource("11_7requ"), ExtResource("12_btysh"), ExtResource("13_l3654"), ExtResource("14_a57x6")]

[node name="CloseAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("10_hvvcf")
samples = [ExtResource("15_abru0"), ExtResource("16_lnirv"), ExtResource("17_qumpm"), ExtResource("18_i0lsy")]

[node name="PressedAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("10_hvvcf")
samples = [ExtResource("19_2hqf4"), ExtResource("20_7pl4f")]

[node name="ExitAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("10_hvvcf")
samples = [ExtResource("21_extue"), ExtResource("22_76278")]
